# eeg-spectral-analysis

./: .gitignore  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  pyproject.toml
docs/: PRECISION_GUARANTEE.md  README.md
examples/: EEG_Channel_Conversion_Documentation.md  README.md  README_CN.md  eeg_channel_conversion.py  example_usage.py  test_conversion.py
src/eegspec/: analyze.py  bands.py  classification.py  cli.py  connectivity.py  data_conversion.py  design_creativity.py  dynamic_window.py  faa.py  features.py  plot_trp.py  psd.py  statistical_analysis.py  statistics.py  trp.py  utils.py
src/eegspec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/eegspec/segmentation/: __init__.py
tests/: test_dynamic_window.py  test_segmentation.py
